--- a/ONGC_Website/index.html
+++ b/ONGC_Website/index.html
@@ -57,7 +57,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle text-primary"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -66,16 +66,22 @@
                   >About Us</a
                 >
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">ONGC</a></li>
-                  <li><a class="dropdown-item" href="#">INSPIRA</a></li>
-                  <li><a class="dropdown-item" href="#">SAS</a></li>
+                  <li>
+                    <a class="dropdown-item text-primary" href="#">ONGC</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-primary" href="#">INSPIRA</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-primary" href="#">SAS</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link text-primary" href="#">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Reports</a>
+                <a class="nav-link text-primary" href="#">Reports</a>
               </li>
             </ul>
           </div>
@@ -288,7 +294,7 @@
         diagnostic to predictive to prescriptive analytics built-in.
       </strong>
       <hr />
-      <div class="card-group">
+      <div class="card-group border border-2 rounded border-warning">
         <div
           class="card align-items-center"
           style="background-color: lemonchiffon"
@@ -297,8 +303,8 @@
             src="assets/analysis.png"
             class="card-img-fluid"
             alt="..."
-            style="height: 100px"
-            width="100
+            style="height: 80px; margin-top: 10px"
+            width="80
           "
           />
           <div class="card-body">
@@ -316,9 +322,9 @@
             src="assets/database.png"
             class="card-img-fluid"
             alt="..."
-            style="height: 100px"
-            width="100
-        "
+            style="height: 80px; margin-top: 10px"
+            width="80
+          "
           />
           <div class="card-body">
             <p class="card-text">
@@ -335,9 +341,9 @@
             src="assets/driller.png"
             class="card-img-fluid"
             alt="..."
-            style="height: 100px"
-            width="100
-    "
+            style="height: 80px; margin-top: 10px"
+            width="80
+          "
           />
 
           <div class="card-body">
@@ -357,9 +363,9 @@
             src="assets/calendar.png"
             class="card-img-fluid"
             alt="..."
-            style="height: 100px"
-            width="100
-        "
+            style="height: 80px; margin-top: 10px"
+            width="80
+          "
           />
           <div class="card-body">
             <p class="card-text">
@@ -370,9 +376,12 @@
       </div>
       <br />
 
-      <div class="card-group">
+      <div class="card-group border border-2 rounded border-warning">
         <div class="card">
-          <div class="card-body text-center">
+          <div
+            class="card-body text-center"
+            style="background-color: lemonchiffon"
+          >
             <h5>TOOLS</h5>
 
             <img
@@ -408,7 +417,10 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-body text-center">
+          <div
+            class="card-body text-center"
+            style="background-color: lemonchiffon"
+          >
             <h5>UTILITIES</h5>
             <img
               src="assets/wrench.png"
@@ -440,13 +452,19 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li>
-                  <button class="dropdown-item" type="button">LAS</button>
+                  <button class="dropdown-item text-success" type="button">
+                    LAS
+                  </button>
                 </li>
                 <li>
-                  <button class="dropdown-item" type="button">DLIS</button>
+                  <button class="dropdown-item text-success" type="button">
+                    DLIS
+                  </button>
                 </li>
                 <li>
-                  <button class="dropdown-item" type="button">SEGY</button>
+                  <button class="dropdown-item text-success" type="button">
+                    SEGY
+                  </button>
                 </li>
               </ul>
             </div>
