--- a/ONGC_Website/index.html
+++ b/ONGC_Website/index.html
@@ -36,7 +36,7 @@
 
           <h6 class="tagline" style="color: darkred">
             Oil and Natural Gas Corporation Limited
-            <p style="font-size: 12px; color: black">A Maharatna Company</p>
+            <p style="font-size: 10px; color: black">A Maharatna Company</p>
           </h6>
         </div>
 
@@ -93,6 +93,7 @@
             type="search"
             placeholder="ElasticSearch"
             aria-label="Search"
+            x
           />
         </form>
       </div>
@@ -447,6 +448,7 @@
                 id="dropdownMenu2"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                data-bs-auto-close="true"
               >
                 Web-Log Viewer
               </button>
