--- a/ONGC_Website/forms.html
+++ b/ONGC_Website/forms.html
@@ -108,7 +108,19 @@
             >
               <div class="card-body p-4 p-md-5">
                 <h2 class="mb-4 pb-2 pb-md-0 mb-md-5">EQUIPMENT LOG SHEET</h2>
+
                 <form>
+                  <div class="row">
+                    <div class="col col-md-6">
+                      <label class="form-label">RIG / WELL :</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="col col-md-6">
+                      <label class="form-label">DATE</label>
+                      <input type="date" class="form-control" />
+                    </div>
+                  </div>
+                  <hr />
                   <div class="row">
                     <div class="col col-md-6">
                       <div class="form-check form-check-inline">
@@ -327,7 +339,31 @@
                       name="text"
                     ></textarea>
                   </div>
+                  <hr />
+                  <div class="row">
+                    <span>Rig Down Time</span>
+                    <div class="col col-6">
+                      <label for="clock">From (Hours)</label>
+                      <input type="time" />
+                    </div>
+                    <div class="col col-6">
+                      <label for="clock">To (Hours)</label>
+                      <input type="time" />
+                    </div>
+                  </div>
+                  <hr />
 
+                  <div class="mb-3 mt-3">
+                    <label for="comment"
+                      >Requirement & Important Information :</label
+                    >
+                    <textarea
+                      class="form-control"
+                      rows="5"
+                      id="comment"
+                      name="text"
+                    ></textarea>
+                  </div>
                   <div class="d-grid gap-2 my-4 py-2">
                     <button class="btn btn-primary" type="button">
                       Submit
