--- a/ONGC_Website/EquipLOGSheet.html
+++ b/ONGC_Website/EquipLOGSheet.html
@@ -22,9 +22,11 @@
   </head>
   <body>
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container-fluid d-flex justify-content-between">
-        <div class="d-flex align-items-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div
+        class="container-fluid d-flex justify-content-between align-items-end"
+      >
+        <div class="d-flex align-items-end">
           <a class="navbar-brand" href="#"
             ><img
               src="assets/Logo.png"
@@ -34,13 +36,15 @@
               class="d-inline-block"
           /></a>
 
-          <h6 class="tagline" style="color: darkred">
+          <h6 class="tagline my-0" style="color: darkred">
             Oil and Natural Gas Corporation Limited
-            <p style="font-size: 12px; color: black">A Maharatna Company</p>
+            <p style="font-size: 10px; color: black" class="mb-2">
+              A Maharatna Company
+            </p>
           </h6>
         </div>
 
-        <div>
+        <div class="navbeaut">
           <button
             class="navbar-toggler"
             type="button"
@@ -63,15 +67,13 @@
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
-                  >About Us</a
+                  >About Project</a
                 >
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item text-primary" href="#">ONGC</a>
+                    <a class="dropdown-item text-primary" href="#">CAP</a>
                   </li>
-                  <li>
-                    <a class="dropdown-item text-primary" href="#">INSPIRA</a>
-                  </li>
+
                   <li>
                     <a class="dropdown-item text-primary" href="#">SAS</a>
                   </li>
@@ -87,17 +89,20 @@
           </div>
         </div>
 
-        <form class="d-flex">
+        <form class="d-flex align-self-end">
           <input
             class="form-control me-2"
             type="search"
             placeholder="ElasticSearch"
             aria-label="Search"
           />
+          <img src="assets/search.png" width="30" height="30" alt="" />
         </form>
       </div>
     </nav>
-    <br />
+    <hr class="my-0" style="color: maroon; height: 3px; opacity: 1" />
+
+    <!-- SECTION -->
     <section class="p-5">
       <div class="container py-5 h-100">
         <div class="row justify-content-center align-items-center h-100">
@@ -120,7 +125,14 @@
                       <input type="date" class="form-control" />
                     </div>
                   </div>
+                  <div class="ROW">
+                    <div class="col col-md-12">
+                      <label class="form-label">RIG / OPERATION</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                  </div>
                   <hr />
+                  <h4>SHIFTS</h4>
                   <div class="row">
                     <div class="col col-md-6">
                       <div class="form-check form-check-inline">
@@ -152,33 +164,45 @@
                     </div>
                   </div>
                   <hr />
+                  <div class="mb-3 mt-3">
+                    <label for="comment">ATTENDANCE</label>
+                    <textarea
+                      class="form-control"
+                      rows="2"
+                      id="comment"
+                      name="text"
+                    ></textarea>
+                  </div>
 
                   <div class="row">
                     <div class="col-12">
                       <label class="form-label select-label">Equipment</label>
-                      <select class="select form-control-md">
-                        <option value="1">Carrier Engine - 1</option>
-                        <option value="2">Carrier Engine - 2</option>
-                        <option value="3">MP Engine - 1</option>
-                        <option value="4">MP Engine - 2</option>
-                        <option value="5">DG SET Engine - 1</option>
-                        <option value="6">DG SET Engine - 2</option>
-                        <option value="7">DG SET Engine - 3</option>
-                        <option value="8">DG SET Engine - 4</option>
-                        <option value="9">Transmission CE - 1</option>
-                        <option value="10">Transmission CE - 2</option>
-                        <option value="11">Compresser (Elect.) - 1</option>
-                        <option value="12">Compresser (Elect.) - 2</option>
-                        <option value="13">Compresser (Mech.) - 1</option>
-                        <option value="14">Compresser (Mech.) - 2</option>
+                      <select
+                        class="select form-control-md"
+                        style="font-size: 14px"
+                      >
+                        <option value="1">Carrier Engine-1</option>
+                        <option value="2">Carrier Engine-2</option>
+                        <option value="3">MP Engine-1</option>
+                        <option value="4">MP Engine-2</option>
+                        <option value="5">DG SET Engine-1</option>
+                        <option value="6">DG SET Engine-2</option>
+                        <option value="7">DG SET Engine-3</option>
+                        <option value="8">DG SET Engine-4</option>
+                        <option value="9">Transmission CE-1</option>
+                        <option value="10">Transmission CE-2</option>
+                        <option value="11">Compresser (Elect.)-1</option>
+                        <option value="12">Compresser (Elect.)-2</option>
+                        <option value="13">Compresser (Mech.)-1</option>
+                        <option value="14">Compresser (Mech.)-2</option>
                         <option value="15">
-                          Diesel Engine Comp. (Mech.) - 1
+                          Diesel Engine Comp. (Mech.)-1
                         </option>
                         <option value="16">
-                          Diesel Engine Comp. (Mech.) - 2
+                          Diesel Engine Comp. (Mech.)-2
                         </option>
-                        <option value="17">Mud Pump - 1</option>
-                        <option value="18">Mud Pump - 2</option>
+                        <option value="17">Mud Pump-1</option>
+                        <option value="18">Mud Pump-2</option>
                         <option value="19">Torque Converter MP1</option>
                         <option value="20">Torque Converter MP2</option>
                         <option value="21">Fire Water Pump</option>
@@ -186,7 +210,7 @@
                       </select>
                     </div>
                     <!-- </div> -->
-                    <div class="col col-6">
+                    <div class="col col-md-6 col-lg-6">
                       <label class="form-label">Other Equipment</label>
                       <input
                         type="text"
@@ -197,7 +221,7 @@
                     </div>
                   </div>
                   <br />
-                  <div class="row">
+                  <div class="row row-modify2">
                     <div class="col col-md-4">
                       <label class="form-label">Water Temp. (&deg;C)</label>
                       <input
@@ -225,7 +249,7 @@
                       />
                     </div>
                   </div>
-                  <div class="row">
+                  <div class="row row-modify2">
                     <div class="col col-md-4">
                       <label class="form-label">Working Hours</label>
                       <input
@@ -251,49 +275,88 @@
                   <div class="row">
                     <div class="col-12">
                       <label class="form-label select-label">Equipment</label>
-                      <select class="select form-control-md">
-                        <option value="22">Power Take - Off - 1</option>
-                        <option value="23">Power Take - Off - 2</option>
+                      <select
+                        class="select form-control-md"
+                        style="font-size: 14px"
+                      >
+                        <option value="22">Power Take-Off-1</option>
+
+                        <option value="23">Power Take-Off-2</option>
+
                         <option value="24">Draw Works</option>
+
                         <option value="25">Rotary / Bevel Gear Box</option>
-                        <option value="26">C/B T/B - Hook</option>
+
+                        <option value="26">C/B T/B-Hook</option>
+
                         <option value="27">Swivel</option>
-                        <option value="28">Shale Shaker Bucket - 1</option>
-                        <option value="29">Shale Shaker Bucket - 2</option>
+
+                        <option value="28">Shale Shaker Bucket-1</option>
+
+                        <option value="29">Shale Shaker Bucket-2</option>
+
                         <option value="30">R/T /Rotary Elevator Drive</option>
                         <option value="31">Hydromatic Brake</option>
-                        <option value="32">Super Charger - 1</option>
-                        <option value="33">Super Charger - 2</option>
-                        <option value="34">Hopper Pump - 1</option>
-                        <option value="35">Hopper Pump - 2</option>
+
+                        <option value="32">Super Charger-1</option>
+
+                        <option value="33">Super Charger-2</option>
+
+                        <option value="34">Hopper Pump-1</option>
+
+                        <option value="35">Hopper Pump-2</option>
+
                         <option value="36">Degasser</option>
+
                         <option value="37">Desander</option>
+
                         <option value="38">Mud Cleaner</option>
+
                         <option value="39">Desander Pump</option>
+
                         <option value="40">Desilter Pump</option>
+
                         <option value="41">Ezy Torque</option>
+
                         <option value="42">Pipe Spinner</option>
+
                         <option value="43">Kelly Spinner</option>
+
                         <option value="44">Main Water Pump</option>
+
                         <option value="45">Second Water Pump</option>
                         <option value="46">Air Winch</option>
-                        <option value="47">Mud Agitator - 1</option>
-                        <option value="48">Mud Agitator - 2</option>
-                        <option value="49">Mud Agitator - 3</option>
-                        <option value="50">Mud Agitator - 4</option>
-                        <option value="51">Mud Agitator - 5</option>
-                        <option value="52">Mud Agitator - 6</option>
-                        <option value="53">Mud Agitator - 7</option>
-                        <option value="54">Mud Agitator - 8</option>
-                        <option value="55">Mud Agitator - 9</option>
-                        <option value="56">Mud Agitator - 10</option>
+
+                        <option value="47">Mud Agitator-1</option>
+
+                        <option value="48">Mud Agitator-2</option>
+
+                        <option value="49">Mud Agitator-3</option>
+
+                        <option value="50">Mud Agitator-4</option>
+
+                        <option value="51">Mud Agitator-5</option>
+
+                        <option value="52">Mud Agitator-6</option>
+
+                        <option value="53">Mud Agitator-7</option>
+
+                        <option value="54">Mud Agitator-8</option>
+
+                        <option value="55">Mud Agitator-9</option>
+
+                        <option value="56">Mud Agitator-10</option>
+
                         v
-                        <option value="57">Mud Agitator - 11</option>
-                        <option value="58">Mud Agitator - 12</option>
+
+                        <option value="57">Mud Agitator-11</option>
+
+                        <option value="58">Mud Agitator-12</option>
+
                         <option value="59">Others</option>
                       </select>
                     </div>
-                    <div class="col col-6">
+                    <div class="col col-md-6 col-lg-6">
                       <label class="form-label">Other Equipment</label>
                       <input
                         type="text"
@@ -304,7 +367,7 @@
                     </div>
                   </div>
                   <br />
-                  <div class="row">
+                  <div class="row row-modify2">
                     <div class="col col-md-4">
                       <label class="form-label">Working Hours</label>
                       <input
@@ -340,8 +403,36 @@
                     ></textarea>
                   </div>
                   <hr />
+                  <div class="row row-modify2">
+                    <span>POL Consumption</span>
+                    <div class="col col-md-4">
+                      <label class="form-label">Oil Grade</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="col col-md-4">
+                      <label class="form-label">First Shift (litres)</label>
+                      <input type="number" class="form-control" />
+                    </div>
+                    <div class="col col-md-4">
+                      <label class="form-label">Second Shift (litres)</label>
+                      <input type="number" class="form-control" />
+                    </div>
+                  </div>
+                  <hr />
                   <div class="row">
-                    <span>Rig Down Time</span>
+                    <span>H.S.D. Balance at 06:30 Hrs.</span>
+                    <div class="col col-md-6">
+                      <label class="form-label">Tank 1</label>
+                      <input type="number" class="form-control" />
+                    </div>
+                    <div class="col col-md-6">
+                      <label class="form-label">Tank 2</label>
+                      <input type="number" class="form-control" />
+                    </div>
+                  </div>
+                  <hr />
+                  <span>Rig Down Time</span>
+                  <div class="row row-modify">
                     <div class="col col-6">
                       <label for="clock">From (Hours)</label>
                       <input type="time" />
