--- a/ONGC_Website/ElectricalLogSheet.HTML
+++ b/ONGC_Website/ElectricalLogSheet.HTML
@@ -27,7 +27,7 @@
         class="container-fluid d-flex justify-content-between align-items-end"
       >
         <div class="d-flex align-items-end">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><img
               src="assets/Logo.png"
               alt="Logo"
@@ -44,7 +44,7 @@
           </h6>
         </div>
 
-        <div class="navbeaut">
+        <div class="navbeaut-1">
           <button
             class="navbar-toggler"
             type="button"
@@ -75,7 +75,9 @@
                   </li>
 
                   <li>
-                    <a class="dropdown-item text-primary" href="#">SAS</a>
+                    <a class="dropdown-item text-primary" href="aboutsas.html"
+                      >SAS</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -89,7 +91,7 @@
           </div>
         </div>
 
-        <form class="d-flex align-self-end">
+        <form class="d-flex align-self-end navbeaut-2">
           <input
             class="form-control me-2"
             type="search"
