--- a/ONGC_Website/aboutsas.html
+++ b/ONGC_Website/aboutsas.html
@@ -75,9 +75,7 @@
                   </li>
 
                   <li>
-                    <a class="dropdown-item text-primary" href="index.html"
-                      >SAS</a
-                    >
+                    <a class="dropdown-item text-primary" href="aboutsas.html">SAS</a>
                   </li>
                 </ul>
               </li>
@@ -104,28 +102,86 @@
     </nav>
     <hr class="my-0" style="color: maroon; height: 3px; opacity: 1" />
 
-    <!-- SECTION -->
-    <section class="p-5">
-      <div class="container py-5 h-100">
-        <div class="row justify-content-center align-items-center h-100">
-          <div class="col-12 col-lg-9 col-xl-7">
-            <div
-              class="card shadow-2-strong card-registration bg-light text-dark"
-              style="border-radius: 15px"
-            >
-              <div class="card-body p-4 p-md-5">
-                <h2 class="mb-4 pb-2 pb-md-0 mb-md-5">
-                  ELECTRICAL DAILY LOG SHEET
-                </h2>
-                <form>
-                  <div class="ROW"></div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid ms-5">
+        <a class="navbar-brand text-light" href="#">About SAS</a>
       </div>
-    </section>
+    </nav>
+
+    <!-- Content -->
+
+    <div class="row justify-content-evenly bgcolor1 m0 align p-3">
+      <div
+        class="p-5 text-light col-12"
+        style="margin: 0 auto"
+      >
+        SAS is a software suite that can mine, alter, manage and retrieve data
+        from a variety of sources and perform statistical analysis on it. SAS
+        provides a graphical point-and-click user interface for non-technical
+        users and more through SAS language. SAS programs have DATA steps, which
+        retrieve and manipulate data, and PROC steps, which analyze the data.
+        Each steps consists of a series of statements.
+      </div>
+    </div>
+
+    
+    <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor text-center p-5 m0">
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 fw-bold fs-1">
+        DATA MANAGEMENT
+      </div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 align" >
+        No matter where your data is stored from cloud, to legacy systems, to
+        data lakes, like Hadoop SAS Data Management helps you access the data
+        you need. Create data management rules once and reuse them, giving you a
+        standard, repeatable method for improving and integrating data without
+        additional cost.
+      </div>
+    </div>
+
+
+    <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor1 text-center p-5 m0">
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 fw-bold fs-1 order-sm-5">
+        EVENT STREAM PROCESSING
+      </div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 align order-sm-1">
+        Streaming data from operations, transactions, sensors and loT devices is
+        valuable when it's well understood. Event stream processing from SAS
+        includes streaming data quality and analytics and a vast array of SAS
+        and open source machine learning and high-frequency analytics for
+        connecting, deciphering, cleansing and understanding streaming data in
+        one solution.
+      </div>
+
+    </div>
+
+
+    <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor text-center p-5 m0">
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 fw-bold fs-1">VISUAL DATA MINING AND MACHINE LEARNING</div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 align">
+        SAS Visual Data Mining and Machine Learning automatically generates
+        insights that enable you to identify the most common variables across
+        all models, and assessment results for all models. Natural language
+        generation capabilities are used to create a project summary written in
+        simple language, enabling you to easily interpret reports.
+      </div>
+    </div>  
+
+
+    <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor1 text-center p-5 m0">
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 fw-bold fs-1 order-sm-5">VISUAL ANALYTICS</div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 align order-sm-1">
+        Quickly spot important relationships in your data using suggestions and
+        clearly identified related measures. Use machine learning and natural
+        language explanations to find, visualize and narrate stories and
+        insights that are easy to understand adn explain. Find out why something
+        happened, examine all options and uncover oppurtunities hidden deep in
+        your data.
+      </div>
+      
+    </div>  
+  </div>
+
     <!-- Footer -->
     <footer class="bg-light text-dark text-center">
       <ul class="nav nav-tabs" style="background-color: #bc987e">
