upgraded to newer frontend 20july

--- a/ONGC_Website/aboutsas.html
+++ b/ONGC_Website/aboutsas.html
@@ -4,76 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <!-- HEADER -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div
-        class="container-fluid d-flex justify-content-between align-items-end"
-      >
+      <div class="container-fluid d-flex justify-content-between align-items-end">
         <div class="d-flex align-items-end">
-          <a class="navbar-brand" href="index.html"
-            ><img
-              src="assets/Logo.png"
-              alt="Logo"
-              width="80"
-              height="80"
-              class="d-inline-block"
-          /></a>
-
-          <h6 class="tagline my-0" style="color: darkred">
-            Oil and Natural Gas Corporation Limited
-            <p style="font-size: 10px; color: black" class="mb-2">
-              A Maharatna Company
-            </p>
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/Logo.png" alt="Logo" width="80" height="80" class="d-inline-block" />
+          </a>
+          <h6 class="tagline my-0" style="color: darkred"> Oil and Natural Gas Corporation Limited <p style="font-size: 10px; color: black" class="mb-2"> A Maharatna Company </p>
           </h6>
         </div>
-
         <div class="navbeaut-1">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle text-primary"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  >About Project</a
-                >
+                <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Project</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
                     <a class="dropdown-item text-primary" href="#">CAP</a>
                   </li>
-
                   <li>
                     <a class="dropdown-item text-primary" href="aboutsas.html">SAS</a>
                   </li>
@@ -88,100 +48,40 @@
             </ul>
           </div>
         </div>
-
         <form class="d-flex align-self-end navbeaut-2">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="ElasticSearch"
-            aria-label="Search"
-          />
+          <input class="form-control me-2" type="search" placeholder="ElasticSearch" aria-label="Search" />
           <img src="assets/search.png" width="30" height="30" alt="" />
         </form>
       </div>
     </nav>
     <hr class="my-0" style="color: maroon; height: 3px; opacity: 1" />
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid ms-5">
         <a class="navbar-brand text-light" href="#">About SAS</a>
       </div>
     </nav>
-
     <!-- Content -->
-
     <div class="row justify-content-evenly bgcolor1 m0 align p-3">
-      <div
-        class="p-5 text-light col-12"
-        style="margin: 0 auto"
-      >
-        SAS is a software suite that can mine, alter, manage and retrieve data
-        from a variety of sources and perform statistical analysis on it. SAS
-        provides a graphical point-and-click user interface for non-technical
-        users and more through SAS language. SAS programs have DATA steps, which
-        retrieve and manipulate data, and PROC steps, which analyze the data.
-        Each steps consists of a series of statements.
-      </div>
+      <div class="p-5 text-light col-12" style="margin: 0 auto"> SAS is a software suite that can mine, alter, manage and retrieve data from a variety of sources and perform statistical analysis on it. SAS provides a graphical point-and-click user interface for non-technical users and more through SAS language. SAS programs have DATA steps, which retrieve and manipulate data, and PROC steps, which analyze the data. Each steps consists of a series of statements. </div>
     </div>
-
-    
     <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor text-center p-5 m0">
-      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 fw-bold fs-1">
-        DATA MANAGEMENT
-      </div>
-      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 align" >
-        No matter where your data is stored from cloud, to legacy systems, to
-        data lakes, like Hadoop SAS Data Management helps you access the data
-        you need. Create data management rules once and reuse them, giving you a
-        standard, repeatable method for improving and integrating data without
-        additional cost.
-      </div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 fw-bold fs-1"> DATA MANAGEMENT </div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 align"> No matter where your data is stored from cloud, to legacy systems, to data lakes, like Hadoop SAS Data Management helps you access the data you need. Create data management rules once and reuse them, giving you a standard, repeatable method for improving and integrating data without additional cost. </div>
     </div>
-
-
     <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor1 text-center p-5 m0">
-      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 fw-bold fs-1 order-sm-5">
-        EVENT STREAM PROCESSING
-      </div>
-      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 align order-sm-1">
-        Streaming data from operations, transactions, sensors and loT devices is
-        valuable when it's well understood. Event stream processing from SAS
-        includes streaming data quality and analytics and a vast array of SAS
-        and open source machine learning and high-frequency analytics for
-        connecting, deciphering, cleansing and understanding streaming data in
-        one solution.
-      </div>
-
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 fw-bold fs-1 order-sm-5"> EVENT STREAM PROCESSING </div>
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 align order-sm-1"> Streaming data from operations, transactions, sensors and loT devices is valuable when it's well understood. Event stream processing from SAS includes streaming data quality and analytics and a vast array of SAS and open source machine learning and high-frequency analytics for connecting, deciphering, cleansing and understanding streaming data in one solution. </div>
     </div>
-
-
     <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor text-center p-5 m0">
       <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 fw-bold fs-1">VISUAL DATA MINING AND MACHINE LEARNING</div>
-      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 align">
-        SAS Visual Data Mining and Machine Learning automatically generates
-        insights that enable you to identify the most common variables across
-        all models, and assessment results for all models. Natural language
-        generation capabilities are used to create a project summary written in
-        simple language, enabling you to easily interpret reports.
-      </div>
-    </div>  
-
-
+      <div class="col-lg-4 col-sm-6 align-self-center text-dark p-4 align"> SAS Visual Data Mining and Machine Learning automatically generates insights that enable you to identify the most common variables across all models, and assessment results for all models. Natural language generation capabilities are used to create a project summary written in simple language, enabling you to easily interpret reports. </div>
+    </div>
     <div class="row justify-content-lg-evenly justify-content-sm-center bgcolor1 text-center p-5 m0">
       <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 fw-bold fs-1 order-sm-5">VISUAL ANALYTICS</div>
-      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 align order-sm-1">
-        Quickly spot important relationships in your data using suggestions and
-        clearly identified related measures. Use machine learning and natural
-        language explanations to find, visualize and narrate stories and
-        insights that are easy to understand adn explain. Find out why something
-        happened, examine all options and uncover oppurtunities hidden deep in
-        your data.
-      </div>
-      
-    </div>  
-  </div>
-
+      <div class="col-lg-4 col-sm-6 align-self-center text-light p-4 align order-sm-1"> Quickly spot important relationships in your data using suggestions and clearly identified related measures. Use machine learning and natural language explanations to find, visualize and narrate stories and insights that are easy to understand adn explain. Find out why something happened, examine all options and uncover oppurtunities hidden deep in your data. </div>
+    </div>
+    </div>
     <!-- Footer -->
     <footer class="bg-light text-dark text-center">
       <ul class="nav nav-tabs" style="background-color: #bc987e">
@@ -198,17 +98,10 @@
           <a class="nav-link footer_links" href="">Disclaimer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: black" href=""
-            >Copyright © Oil and Natural Gas Corporation Limited, All Rights
-            Reserved.</a
-          >
+          <a class="nav-link" style="color: black" href="">Copyright © Oil and Natural Gas Corporation Limited, All Rights Reserved.</a>
         </li>
       </ul>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-      ></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </footer>
-  </body>
+  </body>undefined
 </html>
