--- a/ONGC_Website/index.html
+++ b/ONGC_Website/index.html
@@ -4,80 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div
-        class="container-fluid d-flex justify-content-between align-items-end"
-      >
+      <div class="container-fluid d-flex justify-content-between align-items-end">
         <div class="d-flex align-items-end">
-          <a class="navbar-brand" href="index.html"
-            ><img
-              src="assets/Logo.png"
-              alt="Logo"
-              width="80"
-              height="80"
-              class="d-inline-block"
-          /></a>
-
-          <h6 class="tagline my-0" style="color: darkred">
-            Oil and Natural Gas Corporation Limited
-            <p style="font-size: 10px; color: black" class="mb-2">
-              A Maharatna Company
-            </p>
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/Logo.png" alt="Logo" width="80" height="80" class="d-inline-block" />
+          </a>
+          <h6 class="tagline my-0" style="color: darkred"> Oil and Natural Gas Corporation Limited <p style="font-size: 10px; color: black" class="mb-2"> A Maharatna Company </p>
           </h6>
         </div>
-
         <div class="navbeaut">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle text-primary"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  >About Project</a
-                >
+                <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Project</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
                     <a class="dropdown-item text-primary" href="#">CAP</a>
                   </li>
-
                   <li>
-                    <a class="dropdown-item text-primary" href="aboutsas.html"
-                      >SAS</a
-                    >
+                    <a class="dropdown-item text-primary" href="aboutsas.html">SAS</a>
                   </li>
                 </ul>
               </li>
@@ -90,26 +48,15 @@
             </ul>
           </div>
         </div>
-
         <form class="d-flex align-self-end navbeaut-1">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="ElasticSearch"
-            aria-label="Search"
-          />
+          <input class="form-control me-2" type="search" placeholder="ElasticSearch" aria-label="Search" />
           <img src="assets/search.png" width="30" height="30" alt="" />
         </form>
       </div>
     </nav>
     <hr class="my-0" style="color: maroon; height: 3px; opacity: 1" />
-
     <!-- Showcase -->
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="1800">
           <img src="assets/oilrig1.png" class="d-block w-100" alt="..." />
@@ -119,230 +66,102 @@
         </div>
       </div>
     </div>
-
     <!-- Boxes -->
     <section class="p-5">
       <h3 style="text-align: center">Common Analytics Platform</h3>
       <hr />
-      <strong>
-        An umbrella platform on top of existing domain specific analytical tools
-        and interface with various data sources and applications across ONGC to
-        provide a cross domain integrated data repository available for
-        different aspects of analytics right from ML to descriptive to
-        diagnostic to predictive to prescriptive analytics built-in.
-      </strong>
+      <strong> An umbrella platform on top of existing domain specific analytical tools and interface with various data sources and applications across ONGC to provide a cross domain integrated data repository available for different aspects of analytics right from ML to descriptive to diagnostic to predictive to prescriptive analytics built-in. </strong>
       <hr />
       <div class="card-group border border-2 rounded border-warning">
-        <div
-          class="card align-items-center"
-          style="background-color: lemonchiffon"
-        >
-          <img
-            src="assets/analysis.png"
-            class="card-img-fluid"
-            alt="..."
-            style="height: 80px; margin-top: 10px"
-            width="80
-          "
-          />
+        <div class="card align-items-center" style="background-color: lemonchiffon">
+          <img src="assets/analysis.png" class="card-img-fluid" alt="..." style="height: 80px; margin-top: 10px" width="80
+          " />
           <div class="card-body">
-            <p class="card-text">
-              Common enterprise analytics framework for the functional and cross
-              functional areas.
+            <p class="card-text"> Common enterprise analytics framework for the functional and cross functional areas. </p>
+          </div>
+        </div>
+        <div class="card align-items-center" style="background-color: lemonchiffon">
+          <img src="assets/database.png" class="card-img-fluid" alt="..." style="height: 80px; margin-top: 10px" width="80
+          " />
+          <div class="card-body">
+            <p class="card-text"> Data Integration, Data Transformation, Data Storage, Data Quality and Data Visualization. AI & ML model implementation capability. </p>
+          </div>
+        </div>
+        <div class="card align-items-center" style="background-color: lemonchiffon">
+          <img src="assets/driller.png" class="card-img-fluid" alt="..." style="height: 80px; margin-top: 10px" width="80
+          " />
+          <div class="card-body">
+            <p class="card-text"> Use Case I: Data-Driven Top Down Modeling(TDM) of a reservoir <br />
+              <br /> Use Case II: Drilling Data Analytics for optimization of Pan-India Drilling operations of ONGC
             </p>
           </div>
         </div>
-        <div
-          class="card align-items-center"
-          style="background-color: lemonchiffon"
-        >
-          <img
-            src="assets/database.png"
-            class="card-img-fluid"
-            alt="..."
-            style="height: 80px; margin-top: 10px"
-            width="80
-          "
-          />
+        <div class="card align-items-center" style="background-color: lemonchiffon">
+          <img src="assets/calendar.png" class="card-img-fluid" alt="..." style="height: 80px; margin-top: 10px" width="80
+          " />
           <div class="card-body">
-            <p class="card-text">
-              Data Integration, Data Transformation, Data Storage, Data Quality
-              and Data Visualization. AI & ML model implementation capability.
-            </p>
-          </div>
-        </div>
-        <div
-          class="card align-items-center"
-          style="background-color: lemonchiffon"
-        >
-          <img
-            src="assets/driller.png"
-            class="card-img-fluid"
-            alt="..."
-            style="height: 80px; margin-top: 10px"
-            width="80
-          "
-          />
-
-          <div class="card-body">
-            <p class="card-text">
-              Use Case I: Data-Driven Top Down Modeling(TDM) of a reservoir
-              <br /><br />
-              Use Case II: Drilling Data Analytics for optimization of Pan-India
-              Drilling operations of ONGC
-            </p>
-          </div>
-        </div>
-        <div
-          class="card align-items-center"
-          style="background-color: lemonchiffon"
-        >
-          <img
-            src="assets/calendar.png"
-            class="card-img-fluid"
-            alt="..."
-            style="height: 80px; margin-top: 10px"
-            width="80
-          "
-          />
-          <div class="card-body">
-            <p class="card-text">
-              Post warranty OEM support for 6 years, with more use cases.
-            </p>
+            <p class="card-text"> Post warranty OEM support for 6 years, with more use cases. </p>
           </div>
         </div>
       </div>
       <br />
-
       <div class="card-group border border-2 rounded border-warning">
         <div class="card">
-          <div
-            class="card-body text-center"
-            style="background-color: lemonchiffon"
-          >
+          <div class="card-body text-center" style="background-color: lemonchiffon">
             <h5>TOOLS</h5>
-
-            <img
-              src="assets/SAS Logo.png"
-              class="card-title mb-3 mt-3 img-fluid"
-              alt="SAS"
-            />
+            <img src="assets/SAS Logo.png" class="card-title mb-3 mt-3 img-fluid" alt="SAS" />
             <br />
             <div class="d-grid gap-2">
-              <button class="btn btn-danger" type="button">
-                Data Management
-              </button>
-            </div>
-            <br />
-
-            <div class="d-grid gap-2">
-              <button class="btn btn-danger" type="button">
-                Event Stream Processing
-              </button>
+              <button class="btn btn-danger" type="button"> Data Management </button>
             </div>
             <br />
             <div class="d-grid gap-2">
-              <button class="btn btn-danger" type="button">
-                Visual Data Mining & Machine Learning
-              </button>
+              <button class="btn btn-danger" type="button"> Event Stream Processing </button>
             </div>
             <br />
             <div class="d-grid gap-2">
-              <button class="btn btn-danger" type="button">
-                Visual Analytics
-              </button>
+              <button class="btn btn-danger" type="button"> Visual Data Mining & Machine Learning </button>
+            </div>
+            <br />
+            <div class="d-grid gap-2">
+              <button class="btn btn-danger" type="button"> Visual Analytics </button>
             </div>
           </div>
         </div>
         <div class="card">
-          <div
-            class="card-body text-center"
-            style="background-color: lemonchiffon"
-          >
+          <div class="card-body text-center" style="background-color: lemonchiffon">
             <h5>UTILITIES</h5>
-            <img
-              src="assets/wrench.png"
-              class="card-title mb-3 mt-3 img-fluid"
-              alt="SAS"
-              height="60px"
-              width="60px"
-            />
+            <img src="assets/wrench.png" class="card-title mb-3 mt-3 img-fluid" alt="SAS" height="60px" width="60px" />
             <div class="d-grid gap-2">
-              <button class="btn btn-success" type="button">
-                Web Analytics
-              </button>
+              <button class="btn btn-success" type="button"> Web Analytics </button>
             </div>
             <br />
             <div class="d-grid gap-2">
-              <button
-                class="btn btn-success dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                data-bs-auto-close="true"
-              >
-                Web Forms
-              </button>
+              <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="true"> Web Forms </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li>
-                  <a
-                    target="_blank"
-                    href="EquipLOGSheet.html"
-                    class="dropdown-item text-success"
-                    role="button"
-                  >
-                    Equipment Log Sheet</a
-                  >
+                  <a target="_blank" href="EquipLOGSheet.html" class="dropdown-item text-success" role="button"> Equipment Log Sheet</a>
                 </li>
                 <li>
-                  <a
-                    target="_blank"
-                    href="ElectricalLogSheet.HTML"
-                    class="dropdown-item text-success"
-                    role="button"
-                  >
-                    Electrical Log Sheet
-                  </a>
+                  <a target="_blank" href="ElectricalLogSheet.HTML" class="dropdown-item text-success" role="button"> Electrical Log Sheet </a>
                 </li>
                 <li>
-                  <a
-                    target="_blank"
-                    href="DrillingMudReport.html"
-                    class="dropdown-item text-success"
-                    role="button"
-                    >Drilling Mud Report
-                  </a>
+                  <a target="_blank" href="DrillingMudReport.html" class="dropdown-item text-success" role="button">Drilling Mud Report </a>
                 </li>
               </ul>
             </div>
             <br />
-
             <div class="dropdown d-grid gap-2">
-              <button
-                class="btn btn-success dropdown-toggle"
-                type="button"
-                id="dropdownMenu2"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                data-bs-auto-close="true"
-              >
-                Web-Log Viewer
-              </button>
+              <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="true"> Web-Log Viewer </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li>
-                  <button class="dropdown-item text-success" type="button">
-                    LAS
-                  </button>
+                  <button class="dropdown-item text-success" type="button"> LAS </button>
                 </li>
                 <li>
-                  <button class="dropdown-item text-success" type="button">
-                    DLIS
-                  </button>
+                  <button class="dropdown-item text-success" type="button"> DLIS </button>
                 </li>
                 <li>
-                  <button class="dropdown-item text-success" type="button">
-                    SEGY
-                  </button>
+                  <button class="dropdown-item text-success" type="button"> SEGY </button>
                 </li>
               </ul>
             </div>
@@ -350,7 +169,6 @@
         </div>
       </div>
     </section>
-
     <!-- Footer -->
     <footer class="bg-light text-dark text-center">
       <ul class="nav nav-tabs" style="background-color: #bc987e">
@@ -367,17 +185,10 @@
           <a class="nav-link footer_links" href="">Disclaimer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: black" href=""
-            >Copyright © Oil and Natural Gas Corporation Limited, All Rights
-            Reserved.</a
-          >
+          <a class="nav-link" style="color: black" href="">Copyright © Oil and Natural Gas Corporation Limited, All Rights Reserved.</a>
         </li>
       </ul>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-      ></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </footer>
   </body>
 </html>
